# loga

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml
includes/loga/: algorithms.h  alignment.h  automata.h  bio_alignment.h  cluster.h  collection.h  colors.h  community.h  distance.h  face.h  fwd.h  graph.h  group.h  index.h  knn_cluster.h  multi_alignment.h  outliers.h  package.h  path.h  pattern_sequence.h  segment.h  token.h  tokenized_alignment.h  tokenized_collection.h  tokenized_distance.h  tokenized_group.h  tokenized_multi_alignment.h  zone.h
pack/: loga  loga.cmd
sources/: algorithms.cpp  alignment.cpp  automata.cpp  bio_alignment.cpp  cluster.cpp  collection.cpp  community.cpp  cross.cpp  distance.cpp  face.cpp  graph.cpp  group.cpp  index.cpp  knn_cluster.cpp  main.cpp  multi_alignment.cpp  old.cpp  outliers.cpp  path.cpp  pattern_sequence.cpp  segment.cpp  token.cpp  tokenized.cpp  tokenized_alignment.cpp  tokenized_collection.cpp  tokenized_distance.cpp  tokenized_group.cpp  tokenized_multi_alignment.cpp  zone.cpp
